--- a/.github/workflow/checks.yml
+++ b/.github/workflow/checks.yml
@@ -1,7 +1,8 @@
 ---
 name: Checks
 
-on: [push]
+on: 
+  push:
 
 jobs:
   test-link:
@@ -19,4 +20,3 @@ jobs:
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
-        
