--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,11 +1,7 @@
 ---
 name: Checks
 
-on: 
-  push:
-    # Sequence of patterns matched against refs/heads
-    branches:    
-      - main
+on: [push] 
 
 jobs:
   test-link:
