--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,22 @@ services:
       - ./app:/app
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
+    environment:
+      - DB-HOST=db
+      - DB-NAME=devdb
+      - DB-USER=devuser
+      - DB-PASS=cao1103
+    depends_on:
+      - db
+  
+  db:
+    image: postgres:13-alpine
+    environment:
+      - POSTGRES_USER=devuser
+      - POSTGRES_PASSWORD=cao1103
+      - POSTGRES_DB=devdb
+    volumes:
+      - dev-db-data:/var/lib/postgresql/data
+
+volumes:
+  dev-db-data:
