--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: "3.9"
 
 services:
   app:
@@ -13,19 +13,19 @@ services:
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
     environment:
-      - DB-HOST=db
-      - DB-NAME=devdb
-      - DB-USER=devuser
-      - DB-PASS=cao1103
+      - DB_HOST=db
+      - DB_NAME=devdb
+      - DB_USER=devuser
+      - DB_PASS=cao1103
     depends_on:
       - db
   
   db:
     image: postgres:13-alpine
     environment:
+      - POSTGRES_DB=devdb
       - POSTGRES_USER=devuser
       - POSTGRES_PASSWORD=cao1103
-      - POSTGRES_DB=devdb
     volumes:
       - dev-db-data:/var/lib/postgresql/data
 
