--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django>=3.2.4,<3.3
-djangorestframework>=3.12.4,<3.13
-psycopg2>=2.8.6,<2.9
-drf-spectacular
-Pillow
+Django>=4.1.5,<4.2
+djangorestframework>=3.14.0,<3.15
+psycopg2>=2.9.5,<2.10
+drf-spectacular>=0.25.1,<0.26
+Pillow>=9.4.0,<9.5
